Make sponsors a grid

--- a/index.html
+++ b/index.html
@@ -30,86 +30,83 @@
         <div class="container mt-5 text-center">
             <h4>Dinxper FM wordt mede mogelijk gemaakt door</h4>
 
-            <div class="d-flex justify-content-center">
-
-                <div class="w-50 carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3000">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <a href="http://www.lensinkgussinklo.nl/"><img src="img/logo10.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="http://www.bouwbedrijfluijmes.nl/"><img src="img/logo11.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="https://www.facebook.com/markt.dinxperlo/"><img src="img/makt.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="http://www.naaiateliermoniqueharmsen.nl/"><img src="img/logo13.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="https://podesta.nl/"><img src="img/logo15.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="https://www.facebook.com/Adviesbureau-Roenhorst-Dinxperlo-234893600009274/"><img
-                                    src="img/logo16.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="https://www.kleinentinkfashion.nl/"><img src="img/logo17.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="http://www.groentekwekerij-smits.nl/"><img src="img/logo18.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="http://www.tegrotenhuisdinxperlo.nl/"><img src="img/logo19.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="http://www.thbussink.nl/"><img src="img/logo21.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="https://www.tiggelovend-kok.nl/"><img src="img/logo22.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="http://www.vvnf.nl/home"><img src="img//logo23.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="http://www.etenbijrico.nl/"><img src="img/EtenBijRico.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="https://www.jumbo.com/content/jumbo-dinxperlo-heelweg/"><img
-                                    src="img/jumbo.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="https://www.olddutchdinxperlo.nl/"><img src="img/OldDutch.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="http://www.decohomemazzone.nl/"><img src="img/Mazzone.png"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="https://www.ma-shops.com/"><img src="img/Mashops.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="http://www.werkbank.nl"><img src="img/Werkbank.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="http://www.tekieftedinxperlo.nl/"><img src="img/logo20.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="https://auto-compleet.nl/"><img src="img/Autocompleet.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a
-                                href="https://www.expert.nl/winkels/dinxperlo?gclid=EAIaIQobChMI1Jutxdrh4AIVzLztCh02DgFoEAAYASAAEgJwevD_BwE"><img
-                                    src="img/Expert.jpg"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="http://www.koenders-zalencentrum.nl"><img src="img/Koenders.png"></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="https://www.dinxperlo.nl"><img src="img/AlswinGr.jpg"></a>
-                        </div>
-
-                    </div>
+            <div class="d-flex flex-row flex-wrap">
+                <div class="w-25 p-1 mb-2">
+                    <a href="http://www.lensinkgussinklo.nl/"><img style="width: 250px" src="img/logo10.jpg"></a>
                 </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="http://www.bouwbedrijfluijmes.nl/"><img style="width: 250px" src="img/logo11.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="https://www.facebook.com/markt.dinxperlo/"><img style="width: 250px"
+                            src="img/makt.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="http://www.naaiateliermoniqueharmsen.nl/"><img style="width: 250px"
+                            src="img/logo13.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="https://podesta.nl/"><img style="width: 250px" src="img/logo15.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="https://www.facebook.com/Adviesbureau-Roenhorst-Dinxperlo-234893600009274/"><img
+                            style="width: 250px" src="img/logo16.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="https://www.kleinentinkfashion.nl/"><img style="width: 250px" src="img/logo17.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="http://www.groentekwekerij-smits.nl/"><img style="width: 250px" src="img/logo18.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="http://www.tegrotenhuisdinxperlo.nl/"><img style="width: 250px" src="img/logo19.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="http://www.thbussink.nl/"><img style="width: 250px" src="img/logo21.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="https://www.tiggelovend-kok.nl/"><img style="width: 250px" src="img/logo22.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="http://www.vvnf.nl/home"><img style="width: 250px" src="img//logo23.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="http://www.etenbijrico.nl/"><img style="width: 250px" src="img/EtenBijRico.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="https://www.jumbo.com/content/jumbo-dinxperlo-heelweg/"><img style="width: 250px"
+                            src="img/jumbo.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="https://www.olddutchdinxperlo.nl/"><img style="width: 250px" src="img/OldDutch.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="http://www.decohomemazzone.nl/"><img style="width: 250px" src="img/Mazzone.png"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="https://www.ma-shops.com/"><img style="width: 250px" src="img/Mashops.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="http://www.werkbank.nl"><img style="width: 250px" src="img/Werkbank.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="http://www.tekieftedinxperlo.nl/"><img style="width: 250px" src="img/logo20.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="https://auto-compleet.nl/"><img style="width: 250px" src="img/Autocompleet.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a
+                        href="https://www.expert.nl/winkels/dinxperlo?gclid=EAIaIQobChMI1Jutxdrh4AIVzLztCh02DgFoEAAYASAAEgJwevD_BwE"><img
+                            style="width: 250px" src="img/Expert.jpg"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="http://www.koenders-zalencentrum.nl"><img style="width: 250px" src="img/Koenders.png"></a>
+                </div>
+                <div class="w-25 p-1 mb-2">
+                    <a href="https://www.dinxperlo.nl"><img style="width: 250px" src="img/AlswinGr.jpg"></a>
+                </div>
+
             </div>
 
         </div>
