--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <p class="mt-4">Het swingende geluid van Dinxperlo!</p>
             </div>
 
-            <nav class="navbar navbar-light bg-light d-flux justify-content-center mt-5">
+            <nav class="navbar navbar-light bg-light d-flex justify-content-center mt-5">
                 <ul class="nav">
                     <li class="nav-item">
                         <a class="nav-link" href="https://stream.dinxperfm.nl">Beluister de stream</a>
@@ -30,81 +30,99 @@
         <div class="container mt-5 text-center">
             <h4>Dinxper FM wordt mede mogelijk gemaakt door</h4>
 
-            <div class="d-flex flex-row flex-wrap">
-                <div class="w-25 p-1 mb-2">
-                    <a href="http://www.lensinkgussinklo.nl/"><img style="width: 250px" src="img/logo10.jpg"></a>
+            <div class="d-flex flex-row flex-wrap justify-content-center">
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="http://www.lensinkgussinklo.nl/"><img class="img-fluid" style="max-width: 250px"
+                            src="img/logo10.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="http://www.bouwbedrijfluijmes.nl/"><img style="width: 250px" src="img/logo11.jpg"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="http://www.bouwbedrijfluijmes.nl/"><img class="img-fluid" style="max-width: 250px"
+                            src="img/logo11.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="https://www.facebook.com/markt.dinxperlo/"><img style="width: 250px"
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="https://www.facebook.com/markt.dinxperlo/"><img class="img-fluid" style="max-width: 250px"
                             src="img/makt.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="http://www.naaiateliermoniqueharmsen.nl/"><img style="width: 250px"
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="http://www.naaiateliermoniqueharmsen.nl/"><img class="img-fluid" style="max-width: 250px"
                             src="img/logo13.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="https://podesta.nl/"><img style="width: 250px" src="img/logo15.jpg"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="https://podesta.nl/"><img class="img-fluid" style="max-width: 250px"
+                            src="img/logo15.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
+                <div class="sponsor-card p-1 mb-2">
                     <a href="https://www.facebook.com/Adviesbureau-Roenhorst-Dinxperlo-234893600009274/"><img
-                            style="width: 250px" src="img/logo16.jpg"></a>
+                            style="max-width: 250px" src="img/logo16.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="https://www.kleinentinkfashion.nl/"><img style="width: 250px" src="img/logo17.jpg"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="https://www.kleinentinkfashion.nl/"><img class="img-fluid" style="max-width: 250px"
+                            src="img/logo17.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="http://www.groentekwekerij-smits.nl/"><img style="width: 250px" src="img/logo18.jpg"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="http://www.groentekwekerij-smits.nl/"><img class="img-fluid" style="max-width: 250px"
+                            src="img/logo18.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="http://www.tegrotenhuisdinxperlo.nl/"><img style="width: 250px" src="img/logo19.jpg"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="http://www.tegrotenhuisdinxperlo.nl/"><img class="img-fluid" style="max-width: 250px"
+                            src="img/logo19.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="http://www.thbussink.nl/"><img style="width: 250px" src="img/logo21.jpg"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="http://www.thbussink.nl/"><img class="img-fluid" style="max-width: 250px"
+                            src="img/logo21.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="https://www.tiggelovend-kok.nl/"><img style="width: 250px" src="img/logo22.jpg"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="https://www.tiggelovend-kok.nl/"><img class="img-fluid" style="max-width: 250px"
+                            src="img/logo22.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="http://www.vvnf.nl/home"><img style="width: 250px" src="img//logo23.jpg"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="http://www.vvnf.nl/home"><img class="img-fluid" style="max-width: 250px"
+                            src="img//logo23.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="http://www.etenbijrico.nl/"><img style="width: 250px" src="img/EtenBijRico.jpg"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="http://www.etenbijrico.nl/"><img class="img-fluid" style="max-width: 250px"
+                            src="img/EtenBijRico.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="https://www.jumbo.com/content/jumbo-dinxperlo-heelweg/"><img style="width: 250px"
-                            src="img/jumbo.jpg"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="https://www.jumbo.com/content/jumbo-dinxperlo-heelweg/"><img class="img-fluid"
+                            style="max-width: 250px" src="img/jumbo.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="https://www.olddutchdinxperlo.nl/"><img style="width: 250px" src="img/OldDutch.jpg"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="https://www.olddutchdinxperlo.nl/"><img class="img-fluid" style="max-width: 250px"
+                            src="img/OldDutch.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="http://www.decohomemazzone.nl/"><img style="width: 250px" src="img/Mazzone.png"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="http://www.decohomemazzone.nl/"><img class="img-fluid" style="max-width: 250px"
+                            src="img/Mazzone.png"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="https://www.ma-shops.com/"><img style="width: 250px" src="img/Mashops.jpg"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="https://www.ma-shops.com/"><img class="img-fluid" style="max-width: 250px"
+                            src="img/Mashops.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="http://www.werkbank.nl"><img style="width: 250px" src="img/Werkbank.jpg"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="http://www.werkbank.nl"><img class="img-fluid" style="max-width: 250px"
+                            src="img/Werkbank.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="http://www.tekieftedinxperlo.nl/"><img style="width: 250px" src="img/logo20.jpg"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="http://www.tekieftedinxperlo.nl/"><img class="img-fluid" style="max-width: 250px"
+                            src="img/logo20.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="https://auto-compleet.nl/"><img style="width: 250px" src="img/Autocompleet.jpg"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="https://auto-compleet.nl/"><img class="img-fluid" style="max-width: 250px"
+                            src="img/Autocompleet.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
+                <div class="sponsor-card p-1 mb-2">
                     <a
                         href="https://www.expert.nl/winkels/dinxperlo?gclid=EAIaIQobChMI1Jutxdrh4AIVzLztCh02DgFoEAAYASAAEgJwevD_BwE"><img
-                            style="width: 250px" src="img/Expert.jpg"></a>
+                            style="max-width: 250px" src="img/Expert.jpg"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="http://www.koenders-zalencentrum.nl"><img style="width: 250px" src="img/Koenders.png"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="http://www.koenders-zalencentrum.nl"><img class="img-fluid" style="max-width: 250px"
+                            src="img/Koenders.png"></a>
                 </div>
-                <div class="w-25 p-1 mb-2">
-                    <a href="https://www.dinxperlo.nl"><img style="width: 250px" src="img/AlswinGr.jpg"></a>
+                <div class="sponsor-card p-1 mb-2">
+                    <a href="https://www.dinxperlo.nl"><img class="img-fluid" style="max-width: 250px"
+                            src="img/AlswinGr.jpg"></a>
                 </div>
 
             </div>
