Update MA Shops logo + link

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                             src="img/Mazzone.png"></a>
                 </div>
                 <div class="sponsor-card p-1 mb-2">
-                    <a href="https://www.ma-shops.com/"><img class="img-fluid" style="max-width: 250px"
+                    <a href="https://www.ma-shops.nl/?ref=dinxperfm"><img class="img-fluid" style="max-width: 250px"
                             src="img/Mashops.jpg"></a>
                 </div>
                 <div class="sponsor-card p-1 mb-2">
