Update link text for stream link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <nav class="navbar navbar-light bg-light d-flex justify-content-center mt-5">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://stream.dinxperfm.nl">Beluister de stream</a>
+                        <a class="nav-link" href="https://stream.dinxperfm.nl"
+                            title="Luister naar Dinxper FM - Het swingende geluid van Dinxperlo!">Luister live!</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://uitzendinggemist.dinxperfm.nl">Uitzending gemist</a>
