Style link to stream player.
Should inline player instead.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,20 @@
             <nav class="navbar navbar-light bg-light d-flex justify-content-center mt-5">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://stream.dinxperfm.nl"
-                            title="Luister naar Dinxper FM - Het swingende geluid van Dinxperlo!">Luister live!</a>
+                        <a id="playbutton" class="nav-link" href="https://stream.dinxperfm.nl"
+                            title="Luister naar Dinxper FM - Het swingende geluid van Dinxperlo!">
+
+                            Luister live!
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-play" viewBox="0 0 16 16">
+                                <path
+                                    d="M10.804 8 5 4.633v6.734L10.804 8zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696l6.363 3.692z" />
+                            </svg>
+
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://uitzendinggemist.dinxperfm.nl">Uitzending gemist</a>
+                        <a class="nav-link" href="https://uitzendinggemist.dinxperfm.nl" title="">Uitzending gemist?</a>
                     </li>
                 </ul>
             </nav>
