Add title for email link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </a>
                 </li>
                 <li class="nav-item ms-3">
-                    <a href="mailto:info@dinxperfm.nl">
+                    <a href="mailto:info@dinxperfm.nl" title="Stuur een email naar info@dinxperfm.nl">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-envelope-fill" viewBox="0 0 16 16">
                             <path
