Make contact info align better on small devices

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="bg_wrapper">
         <nav class="navbar navbar-light container bg-light p-2" id="contact_header">
             <ul class="nav">
-                <li class="nav-item ms-1">
+                <li class="nav-item ms-1 me-2">
                     <a href="https://www.facebook.com/DinxperFM" title="DinxperFM Facbook pagina">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-facebook" viewBox="0 0 16 16">
@@ -31,7 +31,7 @@
                         Facebook pagina
                     </a>
                 </li>
-                <li class="nav-item ms-3">
+                <li class="nav-item ms-1 me-2">
                     <a href="mailto:info@dinxperfm.nl" title="Stuur een email naar info@dinxperfm.nl">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-envelope-fill" viewBox="0 0 16 16">
@@ -41,7 +41,7 @@
                         info@dinxperfm.nl
                     </a>
                 </li>
-                <li class="nav-item ms-3">
+                <li class="nav-item ms-1 me-2">
                     Bezoekadres: Europastraat 8, 7091 XC, Dinxperlo
                 </li>
             </ul>
