--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Dinxper FM - het swingende geluid van Dinxperlo</title>
     <link href="bootstrap-5.0.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="styles.css?v=3" rel="stylesheet" type="text/css">
+    <link href="styles.css?v=4" rel="stylesheet" type="text/css">
     <script src="bootstrap-5.0.1-dist/js/bootstrap.bundle.min.js"></script>
 
 
@@ -72,6 +72,12 @@
                     </li>
                 </ul>
             </nav>
+        </div>
+
+        <div class="container mt-5 text-center">
+            <img class="img-fluid" src="programmering/WhatsApp Image 2021-07-28 at 19.46.55.jpeg" />
+            <a target="blank" class="d-block" href="programmering/WhatsApp Image 2021-07-28 at 19.46.55.jpeg">In nieuwe
+                pagina openen</a>
         </div>
 
         <div class="container mt-5 text-center">
