--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Dinxper FM - het swingende geluid van Dinxperlo</title>
     <link href="bootstrap-5.0.1-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="styles.css?v=4" rel="stylesheet" type="text/css">
+    <link href="styles.css?v=5" rel="stylesheet" type="text/css">
     <script src="bootstrap-5.0.1-dist/js/bootstrap.bundle.min.js"></script>
 
 
@@ -14,7 +14,6 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-
 </head>
 
 <body>
@@ -55,17 +54,30 @@
             <nav class="navbar navbar-light bg-light d-flex justify-content-center mt-5">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a id="playbutton" class="nav-link" href="https://stream.dinxperfm.nl"
+                        <div id="player" class="nav-link" href="https://stream.dinxperfm.nl"
                             title="Luister naar Dinxper FM - Het swingende geluid van Dinxperlo!">
 
-                            Luister live!
+                            <span id="player_title">Luister live!</span>
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-play" viewBox="0 0 16 16">
+                                class="bi bi-play" viewBox="0 0 16 16" id="button_play">
                                 <path
                                     d="M10.804 8 5 4.633v6.734L10.804 8zm.792-.696a.802.802 0 0 1 0 1.392l-6.363 3.692C4.713 12.69 4 12.345 4 11.692V4.308c0-.653.713-.998 1.233-.696l6.363 3.692z" />
                             </svg>
 
-                        </a>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-stop-circle d-none" viewBox="0 0 16 16" id="button_stop">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                                <path
+                                    d="M5 6.5A1.5 1.5 0 0 1 6.5 5h3A1.5 1.5 0 0 1 11 6.5v3A1.5 1.5 0 0 1 9.5 11h-3A1.5 1.5 0 0 1 5 9.5v-3z" />
+                            </svg>
+
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-hourglass-split d-none" viewBox="0 0 16 16" id="loading_indicator">
+                                <path
+                                    d="M2.5 15a.5.5 0 1 1 0-1h1v-1a4.5 4.5 0 0 1 2.557-4.06c.29-.139.443-.377.443-.59v-.7c0-.213-.154-.451-.443-.59A4.5 4.5 0 0 1 3.5 3V2h-1a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-1v1a4.5 4.5 0 0 1-2.557 4.06c-.29.139-.443.377-.443.59v.7c0 .213.154.451.443.59A4.5 4.5 0 0 1 12.5 13v1h1a.5.5 0 0 1 0 1h-11zm2-13v1c0 .537.12 1.045.337 1.5h6.326c.216-.455.337-.963.337-1.5V2h-7zm3 6.35c0 .701-.478 1.236-1.011 1.492A3.5 3.5 0 0 0 4.5 13s.866-1.299 3-1.48V8.35zm1 0v3.17c2.134.181 3 1.48 3 1.48a3.5 3.5 0 0 0-1.989-3.158C8.978 9.586 8.5 9.052 8.5 8.351z" />
+                            </svg>
+
+                        </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://uitzendinggemist.dinxperfm.nl" title="">Uitzending gemist?</a>
@@ -202,5 +214,65 @@
         </nav>
     </div>
 </body>
+
+<script>
+
+    let audio = null;
+    const player = document.getElementById('player');
+    const playButton = document.getElementById('button_play');
+    const stopButton = document.getElementById('button_stop');
+    const loadingIndicator = document.getElementById('loading_indicator');
+
+    function show(elem) {
+        elem.classList.remove('d-none');
+        elem.classList.add('d-inline');
+    }
+
+    function hide(elem) {
+        elem.classList.remove('d-inline');
+        elem.classList.add('d-none');
+    }
+
+    function show_only(elem) {
+        hide(playButton);
+        hide(stopButton);
+        hide(loadingIndicator);
+        show(elem);
+    }
+
+    function stop() {
+        if (audio !== null) {
+            audio.src = '';
+            audio.load();
+            audio = null;
+        }
+        show_only(playButton);
+    }
+
+    function start() {
+        audio = document.createElement('audio');
+        audio.autoplay = true;
+        audio.src = 'https://stream.dinxperfm.nl/1';
+        audio.load()
+        audio.onloadeddata = function () {
+            console.log('start play');
+            audio.play();
+            show_only(stopButton);
+        }
+        audio.onerror = function () {
+            stop();
+        }
+        show_only(loadingIndicator);
+    }
+
+    player.onclick = function () {
+        if (audio === null) {
+            start()
+        } else {
+            stop();
+        }
+    };
+
+</script>
 
 </html>
