--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
         </div>
 
         <div class="container mt-5 text-center">
-            <img class="img-fluid" src="programmering/WhatsApp Image 2021-07-28 at 19.46.55.jpeg" />
-            <a target="blank" class="d-block" href="programmering/WhatsApp Image 2021-07-28 at 19.46.55.jpeg">In nieuwe
+            <img class="img-fluid" src="programmering/WhatsApp Image 2021-11-14 at 1.32.13 PM.jpeg" />
+            <a target="blank" class="d-block" href="programmering/WhatsApp Image 2021-11-14 at 1.32.13 PM.jpeg">In
+                nieuwe
                 pagina openen</a>
         </div>
 
