--- a/index.html
+++ b/index.html
@@ -87,10 +87,9 @@
         </div>
 
         <div class="container mt-5 text-center">
-            <img class="img-fluid" src="programmering/WhatsApp Image 2021-11-14 at 1.32.13 PM.jpeg" />
-            <a target="blank" class="d-block" href="programmering/WhatsApp Image 2021-11-14 at 1.32.13 PM.jpeg">In
-                nieuwe
-                pagina openen</a>
+            <img class="img-fluid" src="programmering/WhatsApp Image 2021-12-15 at 10.22.17 AM.jpeg" />
+            <a target="blank" class="d-block" href="programmering/WhatsApp Image 2021-12-15 at 10.22.17 AM.jpeg">In
+                nieuwe pagina openen</a>
         </div>
 
         <div class="container mt-5 text-center">
