Remove twitch stream player
This reverts commit 092e12a33c530dd0db9549f140558cad6c779a40.

--- a/index.html
+++ b/index.html
@@ -45,16 +45,12 @@
                 </li>
             </ul>
         </nav>
-        <div class="container text-center">
-            <div class="row">
-                <div class="col" style="padding-top: 6rem">
-                    <img id="logo" src="img/logodinxperfm.png" />
-                    <p class="mt-4">Het swingende geluid van Dinxperlo!</p>
-                </div>
-                <div class="col" style="padding-top: 6rem">
-                    <iframe src="https://player.twitch.tv/?channel=dinxperfm&parent=localhost&parent=dfmsite.jaroel.nl&parent=www.dinxperfm.nl" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
-                </div>
+        <div class="container text-center" style="padding-top: 10rem">
+            <div class="jumbotron">
+                <img id="logo" src="img/logodinxperfm.png" />
+                <p class="mt-4">Het swingende geluid van Dinxperlo!</p>
             </div>
+
             <nav class="navbar navbar-light bg-light d-flex justify-content-center mt-5">
                 <ul class="nav">
                     <li class="nav-item">
