--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         </div>
 
         <div class="container mt-5 text-center">
-            <img class="img-fluid" src="programmering/WhatsApp Image 2021-12-15 at 10.22.17 AM.jpeg" />
-            <a target="blank" class="d-block" href="programmering/WhatsApp Image 2021-12-15 at 10.22.17 AM.jpeg">In
+            <img class="img-fluid" src="programmering/WhatsApp Image 2022-03-14 at 8.47.36 PM.jpeg" />
+            <a target="blank" class="d-block" href="programmering/WhatsApp Image 2022-03-14 at 8.47.36 PM.jpeg">In
                 nieuwe pagina openen</a>
         </div>
 
