--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         </div>
 
         <div class="container mt-5 text-center">
-            <img class="img-fluid" src="programmering/WhatsApp Image 2022-11-12 at 8.51.16 PM.jpeg" />
-            <a target="blank" class="d-block" href="programmering/WhatsApp Image 2022-11-12 at 8.51.16 PM.jpeg">In
+            <img class="img-fluid" src="programmering/WhatsApp Image 2023-02-08 at 19.36.19.jpeg" />
+            <a target="blank" class="d-block" href="programmering/WhatsApp Image 2023-02-08 at 19.36.19.jpeg">In
                 nieuwe pagina openen</a>
         </div>
 
