--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         </div>
 
         <div class="container mt-5 text-center">
-            <img class="img-fluid" src="programmering/WhatsApp Image 2023-02-09 at 14.27.42.jpeg" />
-            <a target="blank" class="d-block" href="programmering/WhatsApp Image 2023-02-09 at 14.27.42.jpeg">In
+            <img class="img-fluid" src="programmering/WeekprogrammaDFM-20230304.jpg" />
+            <a target="blank" class="d-block" href="programmering/WeekprogrammaDFM-20230304.jpg">In
                 nieuwe pagina openen</a>
         </div>
 
