Update tibatek link

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               src="img/logo-blauwe-meer.png" /></a>
         </div>
         <div class="sponsor-card p-1 mb-2">
-          <a href="https://tibatek.de" target="blank"><img class="img-fluid"
+          <a href="https://www.tibatek.nl" target="blank"><img class="img-fluid"
               style="max-width: 250px; background-color: white; padding: 4px" src="img/tibatek_logo_web.png" /></a>
         </div>
         <div class="sponsor-card p-1 mb-2">
